Add two endpoints for suggestions
